# pyGSM

./: .gitattributes  .gitignore  .lgtm.yml  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  _analyze_string.py  _bmat.py  _hbmat.py  _icoord.py  _linesearch.py  _math_utils.py  _obutils.py  _opt_utils.py  _print_opt.py  atom_data.py  avg_pes.py  base.py  base_dlc.py  base_gsm.py  base_lot.py  base_opt.py  base_optimizer.py  bimol.xyz  block_matrix.py  cartesian.py  conjugate_gradient.py  de_gsm.py  deloc_ics.py  demo.ipynb  dlc.py  dlc_new.py  eigenvector_follow.py  elements.py  energy_optimizer.py  gsm.py  hybrid_dlc.py  hybrid_ef_cg.py  ico.py  (+35 more)
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  build-sphinx.yml
api/: index.html
coordinate_systems/: cartesian.py  delocalized_coordinates.py  internalcoordinates.py
data/: dftb_in.hsd  diels_alder_stray_methane.xyz  dimer.prmtop  ethylene_molpro.com
devtools/: README.md
docs/: Doxyfile.in  Makefile  README.md  api.rst  conf.py  examples.md  getting_started.rst  index.md  index.rst  make.bat
dynamics/: langevin_dynamics.py  nve_dynamics.py  vv.py
examples/: ase_api_de_gsm.py  ase_api_example.py  index.html  minimize.py  run_de_gsm.py  run_se_cross.py  run_se_gsm.py
examples/qchem/: commands.sh
examples/tests/: FeO_H2.xyz  NiL2Br2_sqpl.xyz  pent-4-enylbenzene_pos1_11DICHLOROETHANE.xyz  twisted_fluoroethene.xyz
growing_string_methods/: _print_opt.py  de_gsm.py  se_cross.py  se_gsm.py
ipynb_demos/data/: system.inpcrd  system.prmtop
ipynb_demos/pytc/: Cmom.npz  DE_GSM.ipynb  Untitled1.ipynb  cartesian_sd.xyz  check.xyz  conjugate_gradient_DLC.xyz  demo.ipynb  et_meci.xyz  large_test-TRIC.ipynb  lbfgs_DLC.xyz  psiw_jobs.txt
ipynb_demos/terachemcloud/: TCC_pyGSM.ipynb
level_of_theories/: dftb.py  pytc.py  qchem.py  terachemcloud.py
optimizers/: _linesearch.py  base_optimizer.py  beales_cg.py  conjugate_gradient.py  lbfgs.py
potential_energy_surfaces/: avg_pes.py  penalty_pes.py  pes.py
processing/: _plot.py
pyGSM/: __init__.py  _version.py
pyGSM/coordinate_systems/: delocalized_coordinates.py  internal_coordinates.py  primitive_internals.py  slots.py
pyGSM/data/: diels_alder.xyz  solvated.prmtop  solvated.rst7
pyGSM/growing_string_methods/: __init__.py  de_gsm.py  gsm.py  main_gsm.py
scripts/: f2s.py
search/: search_index.json
tests/: FeCO5.xyz  FePorphO2.xyz  NiL2Br2_sqpl.xyz  NiL2Br2_tetr.xyz  SiH2H2.xyz  bent_benzene.xyz  benzene.xyz  cyclohexene.xyz  fluoroethene.xyz  methane.xyz
utilities/: _math_utils.py  elements.py  nifty.py  random_quotes.py  units.py
wrappers/: __init__.py
(+144 files in other folders)
