# Helper file to handle all configs

# setuptools configuration.
# see https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
# Self-descriptive entries which should always be present
name = pygsm
author = Cody Aldaz
author_email = codyaldaz@gmail.com
description = Reaction path and photochemistry tool
long_description = file: README.md
long_description_content_type = "text/markdown"
version = attr: pygsm.__version__
license = MIT
python_requires = ">=3.7"
# See https://pypi.org/classifiers/
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
# Update the urls and uncomment, once the hosting is set up.
#project_urls =
#    Source = https://github.com/<username>/pygsm/
#    Documentation = https://pygsm.readthedocs.io/
# Other possible metadata.
# Ref https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
#keywords = one, two
#platforms = ["Linux",
#             "Mac OS-X",
#             "Unix",
#             "Windows"]

[options]
# As of version 0.971, mypy does not support type checking of installed zipped
# packages (because it does not actually import the Python packages).
# We declare the package not-zip-safe so that our type hints are also available
# when checking client code that uses our (installed) package.
# Ref:
# https://mypy.readthedocs.io/en/stable/installed_packages.html?highlight=zip#using-installed-packages-with-mypy-pep-561
zip_safe = False
install_requires =
    importlib-resources; python_version<"3.10"
tests_require =
    pytest>=6.1.2
    pytest-runner
# Which Python importable modules should be included when your package is installed
# Handled automatically by setuptools. Use 'exclude' to prevent some specific
# subpackage(s) from being added, if needed
packages = find:
# Alternatively, see ; https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
#package_dir =
#    =src
[options.packages.find]
where = .

# Optionally, include package data to ship with your package
# Customize MANIFEST.in if the general case does not suit your needs
[options.package_data]
pygsm = py.typed

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    pygsm/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[aliases]
test = pytest
